# SO2-2019_TP1

./: .gitignore  CMakeLists.txt  file_server
assets/: file_server  received_file  users_db.json
scripts/: file_server  file_socket_client.py  file_socket_server.py  mock_server.py  received_file  tcp_server_mock.py  udp_server.py  udp_server_mock.py
src/: login_service.c  login_service.h  presenter.c  presenter.h  satellite_service.c  satellite_service.h  socket_client.h  station_app.c  tcp_socket_client.c  udp_socket_client.c  vista.c  vista.h
src/shared/: socket_client.h  tcp_socket_operations.c  udp_socket_client.c
unittest/: test_both_even.c
